Last login: Thu Mar 10 23:06:14 on ttys000
Gizem:~ gizem$ git pull
fatal: Not a git repository (or any of the parent directories): .git
Gizem:~ gizem$ pwd
/Users/gizem
Gizem:~ gizem$ cd D
Desktop/   Documents/ Downloads/ 
Gizem:~ gizem$ cd D
Desktop/   Documents/ Downloads/ 
Gizem:~ gizem$ cd Dcd Desktop/GitHub/
-bash: cd: Dcd: No such file or directory
Gizem:~ gizem$ cd Desktop/GitHub
Gizem:GitHub gizem$ ls
channelflow
Gizem:GitHub gizem$ cd channelflow/
Gizem:channelflow gizem$ git pull
There is no tracking information for the current branch.
Please specify which branch you want to merge with.
See git-pull(1) for details

    git pull <remote> <branch>

If you wish to set tracking information for this branch you can do so with:

    git branch --set-upstream-to=origin/<branch> master

Gizem:channelflow gizem$ git add
Nothing specified, nothing added.
Maybe you wanted to say 'git add .'?
Gizem:channelflow gizem$ ls
deneme
Gizem:channelflow gizem$ cd deneme/
Gizem:deneme gizem$ ls
README.md	aciklama.html	deneme.tex
Gizem:deneme gizem$ git add aciklama.html 
Gizem:deneme gizem$ git add deneme.tex 
Gizem:deneme gizem$ git commit -m "degisiklik"
[master 4bad97a] degisiklik
 Committer: krcgzm23 <gizem@Gizem.local>
Your name and email address were configured automatically based
on your username and hostname. Please check that they are accurate.
You can suppress this message by setting them explicitly:

    git config --global user.name "Your Name"
    git config --global user.email you@example.com

After doing this, you may fix the identity used for this commit with:

    git commit --amend --reset-author

 2 files changed, 10 insertions(+)
 create mode 100644 aciklama.html
 create mode 100644 deneme.tex
Gizem:deneme gizem$ git push
Counting objects: 4, done.
Delta compression using up to 4 threads.
Compressing objects: 100% (4/4), done.
Writing objects: 100% (4/4), 539 bytes | 0 bytes/s, done.
Total 4 (delta 0), reused 0 (delta 0)
To https://github.com/krcgzm23/deneme.git
   bea458f..4bad97a  master -> master
Gizem:deneme gizem$ git branch feature
Gizem:deneme gizem$ git checkout feature
Switched to branch 'feature'
Gizem:deneme gizem$ ls
README.md	aciklama.html	deneme.tex
Gizem:deneme gizem$ emacs aciklama.html 
Gizem:deneme gizem$ git add aciklama.html 
Gizem:deneme gizem$ gti commit "new branch"
-bash: gti: command not found
Gizem:deneme gizem$ git commit -m "new branch"
[feature 978b60d] new branch
 Committer: krcgzm23 <gizem@Gizem.local>
Your name and email address were configured automatically based
on your username and hostname. Please check that they are accurate.
You can suppress this message by setting them explicitly:

    git config --global user.name "Your Name"
    git config --global user.email you@example.com

After doing this, you may fix the identity used for this commit with:

    git commit --amend --reset-author

 1 file changed, 3 insertions(+), 1 deletion(-)
Gizem:deneme gizem$ git push
Everything up-to-date
Gizem:deneme gizem$ git merge
fatal: No remote for the current branch.
Gizem:deneme gizem$ git checkout master
Switched to branch 'master'
Your branch is up-to-date with 'origin/master'.
Gizem:deneme gizem$ git merge
Already up-to-date.
Gizem:deneme gizem$ ls
README.md	aciklama.html	deneme.tex
Gizem:deneme gizem$ emacs aciklama.html 
Gizem:deneme gizem$ git add aciklama.html 
Gizem:deneme gizem$ git commit "browser"
error: pathspec 'browser' did not match any file(s) known to git.
Gizem:deneme gizem$ git commit -m "browser"
[master 43d49fe] browser
 Committer: krcgzm23 <gizem@Gizem.local>
Your name and email address were configured automatically based
on your username and hostname. Please check that they are accurate.
You can suppress this message by setting them explicitly:

    git config --global user.name "Your Name"
    git config --global user.email you@example.com

After doing this, you may fix the identity used for this commit with:

    git commit --amend --reset-author

 1 file changed, 2 insertions(+), 1 deletion(-)
Gizem:deneme gizem$ git push
Counting objects: 3, done.
Delta compression using up to 4 threads.
Compressing objects: 100% (3/3), done.
Writing objects: 100% (3/3), 391 bytes | 0 bytes/s, done.
Total 3 (delta 0), reused 0 (delta 0)
To https://github.com/krcgzm23/deneme.git
   4bad97a..43d49fe  master -> master
Gizem:deneme gizem$ git init hello
Initialized empty Git repository in /Users/gizem/Desktop/GitHub/channelflow/deneme/hello/.git/
Gizem:deneme gizem$ rm -Rf hello/
Gizem:deneme gizem$ cd ..
Gizem:channelflow gizem$ pwd
/Users/gizem/Desktop/GitHub/channelflow
Gizem:channelflow gizem$ cd ..
Gizem:GitHub gizem$ pwd
/Users/gizem/Desktop/GitHub
Gizem:GitHub gizem$ git init hello
Initialized empty Git repository in /Users/gizem/Desktop/GitHub/hello/.git/
Gizem:GitHub gizem$ vi configure.ac

AC_INIT([BONJOUR], [0.01])
AC_OUTPUT
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    
~                                                                                                                                                                                    

